/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.bit.udf;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "FunctionRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

import "UserBitShared.proto";

////// BitControl RPC ///////
enum RpcType {
  ACK = 1;

  // exec > coordinator
  REQ_FUNCTION_INFO = 2;
  RESP_FUNCTION_INFO = 3;
}

message FunctionInfo {
  optional string name = 1;
  optional string sql = 2;
  optional string returnType = 3;
  optional string argList = 4;
  optional int64 created_at = 5;
  optional int64 last_modified_at = 6;
  optional string fullPath = 7;
  optional string owner = 8;
}

message FunctionInfoResp {
  repeated FunctionInfo function_info = 1;
}

message FunctionInfoReq {
}
